<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/connectFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/title_connect" />

    <item
        android:id="@+id/locateFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_locate" />

    <item
        android:id="@+id/transactionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bills_24"
        android:title="@string/transactions" />

</menu>