<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthFragments.RegisterFragment">

    <TextView
        android:id="@+id/fragment_register_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.15"
        android:text="@string/register_greeting"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_register_button_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/login_prompt"
        app:layout_constraintBottom_toTopOf="@+id/fragment_register_button_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow_form" />

    <Button
        android:id="@+id/fragment_register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_button_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_textInputLayout_aadhaarNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_credit_card_24"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="553dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_register_textInput_aadhaarNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Aadhaar Card Number"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_textInputLayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:endIconMode="password_toggle"
        app:helperText="@string/password_requirements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_security_24"
        tools:layout_editor_absoluteY="525dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_register_textInput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword|textWebPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_textInputLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="387dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_register_textInput_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_textInputLayout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
        tools:layout_editor_absoluteY="248dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_register_textInput_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="fragment_register_button_qrScanner,fragment_register_textInputLayout_aadhaarNo,fragment_register_textInputLayout_name,fragment_register_textInputLayout_email,fragment_register_textInputLayout_password"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/fragment_register_button_qrScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_aadhaar_card"
        app:icon="@drawable/ic_baseline_qr_code_scanner_24"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="129dp" />


</androidx.constraintlayout.widget.ConstraintLayout>