<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/icon_list_view__card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/transaction_list_item_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:tint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plastic_icon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/transaction_list_view_credits"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/green_700"
            android:gravity="center"
            android:text="@string/dollar_sign"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/transaction_list_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Date: "
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/transaction_list_view_title"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/transaction_list_item_icon"
            app:layout_constraintTop_toBottomOf="@+id/transaction_list_view_uid" />

        <TextView
            android:id="@+id/transaction_list_view_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="@+id/guideline15"
            app:layout_constraintTop_toBottomOf="@+id/transaction_list_view_title" />

        <TextView
            android:id="@+id/transaction_list_view_title"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/type_waste"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/transaction_list_view_weight"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="@+id/guideline15"
            app:layout_constraintTop_toBottomOf="@+id/transaction_list_date" />

        <TextView
            android:id="@+id/transaction_list_view_uid"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/transaction_list_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="@+id/guideline15"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>